<?xml version="1.0"?>
<package format="3">
  <name>tiago_msgs</name>
  <version>0.1.0</version>
  <description>TODO</description>
  <maintainer email="5305@pw.edu.pl">dseredyn</maintainer>
  <license>BSD</license>
  <author email="5305@pw.edu.pl">dseredyn</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for ROS 2 -->
  <depend>rosidl_default_generators</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
